# py-clean-arch

./: .cspell.json  .cspell.jsonc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/actions/setup-poetry-deps/: action.yml
.github/actions/setup-uv-deps/: action.yml
.github/workflows/: ci.yml
app/: db.py  facade.py  main.py  models.py  repositories.py
app/core/: config.py
app/routers/: apis.py  schemas.py
app/templates/: index.html
docs/: ascii-flow.md  faq.md
scripts/: db-docker-compose.yml  mongodb-init-replica-set.sh  mongodb-init.sh  mysql-init.sql
src/: facade.py  main.py  models.py  repositories.py
src/adapters/mail/: __init__.py  abstraction.py  aiosmtplib.py
src/app/deliveries/graphql/: middleware.py  strawberry.py
src/app/deliveries/graphql/extensions/: fastapi.py  strawberry.py
src/app/deliveries/graphql/pokemon/: mapper.py  mutation.py  query.py  router.py  scalar.py  schema.py
src/app/deliveries/http/: extension.py  fastapi.py  middleware.py
src/app/deliveries/http/pokemon/: mapper.py  router.py  schema.py
src/app/di/: dependency_injection.py  unit_of_work.py
src/app/repositories/abstraction/: pokemon.py
src/app/repositories/nosql/pokemon/: mapper.py  repository.py
src/app/repositories/rdbms/pokemon/: mapper.py  orm.py  repository.py  type.py
src/app/repositories/relational_db/pokemon/: mapper.py  repository.py
src/app/repositories/relationaldb/pokemon/: orm.py  repository.py
src/app/usecases/: pokemon.py
src/common/: docstring.py  type.py  utils.py
src/controllers/: __init__.py
src/controllers/graphql/: extension.py  router.py
src/controllers/graphql/pokemon/: mapper.py  mutation.py  query.py  router.py  schema.py
src/controllers/graphql/trainer/: mapper.py  mutation.py  query.py  schema.py
src/controllers/http/: extension.py
src/controllers/http/pokemon/: router.py
src/controllers/rest/: extension.py
src/controllers/rest/pokemon/: mapper.py  schema.py
src/controllers/rest/trainer/: mapper.py  router.py  schema.py
src/core/: config.py  exception.py  utils.py
src/di/: dependency_injection.py  unit_of_work.py
src/entrypoints/: __init__.py
src/entrypoints/graphql/: extension.py
src/entrypoints/graphql/extensions/: __init__.py  fastapi.py
src/entrypoints/graphql/pokemon/: mapper.py  mutation.py  query.py  router.py  schema.py
src/entrypoints/http/: extension.py
src/entrypoints/http/pokemon/: mapper.py  schema.py
src/models/: exception.py  pokemon.py  trainer.py
src/pkg/deliveries/graphql/pokomon/: mutation.py  query.py  router.py  scalar.py  schema.py
src/pkg/deliveries/http/pokemon/: router.py  schema.py  schemas.py
src/pkg/repositories/rdbms/pokemon/: orm.py  repository.py  type.py
src/pkg/usecases/: pokemon.py
src/repositories/abstraction/: __init__.py  pokemon.py  trainer.py
src/repositories/document_db/: __init__.py
src/repositories/document_db/pokemon/: mapper.py  odm.py  repository.py
src/repositories/document_db/trainer/: mapper.py  odm.py  repository.py
src/repositories/key_value_db/: __init__.py
src/repositories/key_value_db/pokemon/: mapper.py  okvm.py  repository.py
src/repositories/key_value_db/trainer/: mapper.py  okvm.py  repository.py
src/repositories/nosql/: __init__.py
src/repositories/nosql/pokemon/: odm.py  repository.py
src/repositories/relational_db/: __init__.py
src/repositories/relational_db/pokemon/: orm.py  repository.py
src/repositories/relational_db/trainer/: mapper.py  orm.py  repository.py
src/routers/: apis.py
src/settings/: __init__.py  db.py  dependency_injection.py  test.py  unit_of_work.py
src/settings/db/: __init__.py  base.py  mongodb.py  mysql.py  postgres.py  redis.py  sqlite.py
src/tests/: __init__.py  conftest.py  test_apis.py  test_graphql_apis.py  test_http_apis.py
src/tests/integration/: test_graphql_apis.py  test_http_apis.py
src/tests/unit/: test_usecase_pokemon.py
src/usecases/: __init__.py  pokemon.py  trainer.py
tests/: api_db_test.bats  conftest.py  test_apis.py
tests/functional/: test_complex_pokemon_operations.py  test_operations.py  test_pokemon_evolution_scenarios.py
tests/integration/: __init__.py  test_graphql_apis.py  test_http_apis.py  test_rest_apis.py
tests/unit/: __init__.py  test_repository_document_db.py  test_usecase.py  test_usecase_pokemon.py
