[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "py-clean-arch"
version = "4.0.0"
description = ""
authors = [{ name = "cdddg2@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.128,<1",
  "injector>=0.24,<1",
  "pydantic>=2.12,<3",
  "strawberry-graphql>=0.291,<1",
  "uvicorn>=0.40,<1",
]

[dependency-groups]
dev = [
  "black>=24.10,<25",
  "pre-commit>=3.8,<4",
  "pylint>=2.17,<3",
  "pyright>=1.1,<2",
  "ruff>=0.15,<1",
  "types-redis>=4.6,<5",
]
test = [
  "gevent>=24.11,<25",
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "pytest-cov>=5.0,<6",
  "pytest-dependency>=0.6,<1",
  "pytest-env>=1.2,<2",
]
db = [
  "aiosqlite>=0.22,<1",
  "asyncmy>=0.2,<1",
  "asyncpg>=0.31,<1",
  "motor>=3.7,<4",
  "redis>=5.3,<6",
  "sqlalchemy>=2.0,<3",
]

[tool.uv]
package = false
default-groups = ["dev", "test", "db"]


[tool.black]
line-length = 100
skip-string-normalization = true

[tool.pylint]
extension-pkg-whitelist = ["pydantic"]
max-line-length = 100
disable = [
  "W0613", # unused-argument
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "C0301", # line-too-long
  "W0511", # fixme
  "E0213", # no-self-argument
  "C0103", # invalid-name
  "W0707", # raise-missing-from
  "C0123", # unidiomatic-typecheck
  "R0903", # too-few-public-methods
  "W1203", # logging-fstring-interpolation
  "E1102", # not-callable (false positive with sqlalchemy.sql.func)
  "W0622", # redefined-builtin (common use of 'id' as parameter name)
]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("./src")'

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes (includes F401 unused imports)
  "T20", # flake8-print
  "Q",   # flake8-quotes
  "I",   # isort (import sorting)
]
ignore = [
  "E501", # line-too-long (handled by black)
  "D10",  # missing-docstring-* (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
  "D203", # incorrect-blank-line-before-class (https://github.com/PyCQA/pydocstyle/issues/141#issuecomment-146903063)
  "D212", # multi-line-summary-first-line
]
fixable = [
  "F401", # unused import
  "Q",    # flake8-quotes
  "I",    # isort (import sorting)
  "T20",  # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused import
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "standard"
reportUnusedVariable = true

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "8.4"
addopts = """
-sxvv
-p no:logging
--cov-config=pyproject.toml
--cov=src
--cov-report=
--cov-append
--no-cov-on-fail
"""
env = [
  "D:SQLALCHEMY_ECHO=false",
  "D:DATABASE_URI=sqlite+aiosqlite:///:memory:?reinitialize=true",
]
filterwarnings = [
  "error",
  "ignore:pkg_resources is deprecated as an API*:DeprecationWarning",
  "ignore::sqlalchemy.exc.MovedIn20Warning",
]
python_files = ["test*.py"]

[tool.coverage.run]
concurrency = ["gevent"]                                      # https://stackoverflow.com/a/76033894
omit = ["*/settings/db/*", "*/settings/test.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = ["raise NotImplementedError"]
